mysql/mysql.yaml

# Mysql Deployment + Service manifest
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - name: mysqldb
        image: mysql:8.0.27
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
        # Container inside volume
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      # Volume Claim
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim



---

# Service
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-service
spec:
  selector:
    app: mysqldb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
